[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/sewers.tres" type="TileSet" id=1]
[ext_resource path="res://art/sewers.png" type="Texture" id=2]
[ext_resource path="res://navdi2/Node Scripts/Board/NavdiBoardTileMap.gd" type="Script" id=5]
[ext_resource path="res://navdi2/Node Scripts/Pin/NavdiPinQuickPlayer.gd" type="Script" id=6]
[ext_resource path="res://00-core/SubwayStopBoard.gd" type="Script" id=7]
[ext_resource path="res://navdi2/Node Scripts/Board/NavdiBoardState.gd" type="Script" id=8]
[ext_resource path="res://01-droqen/Pickup_Coin3.wav" type="AudioStream" id=11]
[ext_resource path="res://navdi2/Node Scripts/NavdiSheetSprite.gd" type="Script" id=12]
[ext_resource path="res://03-pancelor/player.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.9, 2.9 )

[node name="NavdiBoard" type="Node2D"]
position = Vector2( 80, 80 )
script = ExtResource( 7 )
board_view_size = Vector2( 160, 160 )
show_outline = true

[node name="State" type="Node2D" parent="."]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="NavdiBoardTileMap" type="TileMap" parent="State"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -524294, 11, 0, -524293, 11, 0, -524292, 11, 0, -524291, 11, 0, -524290, 11, 0, -524289, 11, 0, -589824, 11, 0, -589823, 11, 0, -589822, 11, 0, -589821, 11, 0, -589820, 11, 0, -589819, 11, 0, -458758, 11, 0, -458757, 10, 0, -458756, 10, 0, -458755, 10, 0, -458754, 11, 0, -458753, 10, 0, -524288, 10, 0, -524287, 10, 0, -524286, 11, 0, -524285, 10, 0, -524284, 10, 0, -524283, 11, 0, -393222, 11, 0, -393221, 10, 0, -393220, 10, 0, -393219, 10, 0, -393218, 10, 0, -393217, 10, 0, -458752, 10, 0, -458751, 10, 0, -458750, 10, 0, -458749, 10, 0, -458748, 12, 0, -458747, 11, 0, -327686, 11, 0, -327685, 10, 0, -327684, 10, 0, -327683, 10, 0, -327682, 10, 0, -327681, 10, 0, -393216, 10, 0, -393215, 10, 0, -393214, 10, 0, -393213, 10, 0, -393212, 10, 0, -393211, 11, 0, -262150, 11, 0, -262149, 10, 0, -262148, 10, 0, -262147, 10, 0, -262146, 10, 0, -262145, 10, 0, -327680, 10, 0, -327679, 10, 0, -327678, 10, 0, -327677, 10, 0, -327676, 10, 0, -327675, 11, 0, -196614, 11, 0, -196613, 10, 0, -196612, 10, 0, -196611, 10, 0, -196610, 10, 0, -196609, 10, 0, -262144, 10, 0, -262143, 10, 0, -262142, 11, 0, -262141, 10, 0, -262140, 10, 0, -262139, 11, 0, -131078, 11, 0, -131077, 11, 0, -131076, 10, 0, -131075, 10, 0, -131074, 10, 0, -131073, 10, 0, -196608, 10, 0, -196607, 10, 0, -196606, 11, 0, -196605, 10, 0, -196604, 10, 0, -196603, 11, 0, -65542, 11, 0, -65541, 10, 0, -65540, 10, 0, -65539, 10, 0, -65538, 10, 0, -65537, 10, 0, -131072, 11, 0, -131071, 10, 0, -131070, 10, 0, -131069, 10, 0, -131068, 10, 0, -131067, 11, 0, -6, 11, 0, -5, 10, 0, -4, 10, 0, -3, 10, 0, -2, 10, 0, -1, 10, 0, -65536, 10, 0, -65535, 10, 0, -65534, 10, 0, -65533, 10, 0, -65532, 10, 0, -65531, 11, 0, 65530, 11, 0, 65531, 12, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 0, 10, 0, 1, 11, 0, 2, 10, 0, 3, 10, 0, 4, 12, 0, 5, 11, 0, 131066, 11, 0, 131067, 12, 0, 131068, 11, 0, 131069, 0, 0, 131070, 10, 0, 131071, 10, 0, 65536, 10, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 11, 0, 65541, 11, 0, 196600, 11, 0, 196601, 11, 0, 196602, 11, 0, 196603, 12, 0, 196604, 11, 0, 196605, 11, 0, 196606, 10, 0, 196607, 10, 0, 131072, 10, 0, 131073, 11, 0, 131074, 10, 0, 131075, 11, 0, 131076, 11, 0, 131077, 11, 0, 262136, 11, 0, 262137, 12, 0, 262138, 12, 0, 262139, 12, 0, 262140, 12, 0, 262141, 10, 0, 262142, 10, 0, 262143, 12, 0, 196608, 10, 0, 196609, 10, 0, 196610, 10, 0, 196611, 11, 0, 327672, 11, 0, 327673, 11, 0, 327674, 11, 0, 327675, 11, 0, 327676, 11, 0, 327677, 11, 0, 327678, 11, 0, 327679, 11, 0, 262144, 11, 0, 262145, 11, 0, 262146, 11, 0, 262147, 11, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
refresh_tileset = false

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( -51.4412, 27.3724 )
script = ExtResource( 13 )
idl_frames = [ 2 ]
run_frames = [ 2, 3, 2, 4 ]
slide_frames = [ 3, 4 ]

[node name="NavdiSheetSprite" type="Sprite" parent="player"]
texture = ExtResource( 2 )
hframes = 10
vframes = 2
frame = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}
_frames = [ 2 ]
_rate = 8.0
_editor_sheet = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="NavdiPinQuickPlayer" type="Node" parent="player"]
script = ExtResource( 6 )

[node name="get" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 11 )
